# infra

./: .ansible-lint.yml  .editorconfig  CLAUDE.md  ansible.cfg  prek.toml  pyproject.toml
.github/workflows/: lint.yml
inventory/: inventory.yml
inventory/group_vars/all/: internal.yml  main.yml  vault.yml
inventory/group_vars/borgmatic/: main.yml  vault.yml
inventory/group_vars/ceres_guests/: internal.yml  main.yml  vault.yml
inventory/group_vars/ceres_lxc/: main.yml
inventory/group_vars/debian/: main.yml  vault.yml
inventory/group_vars/gentoo/: main.yml
inventory/group_vars/guests/: main.yml
inventory/group_vars/luna-guests/: main.yml  vault.yml
inventory/group_vars/luna_guests/: internal.yml  main.yml  vault.yml
inventory/group_vars/lxc/: internal.yml  main.yml
inventory/group_vars/pve-guests/: main.yml
inventory/group_vars/pve_guests/: main.yml  vault.yml
inventory/group_vars/pveguests/: main.yml  vault.yml
inventory/group_vars/servers/: main.yml
inventory/group_vars/smartmontools/: main.yml
inventory/group_vars/vms/: internal.yml
inventory/group_vars/workstations/: main.yml  vault.yml
inventory/group_vars/zfs/: main.yml  vault.yml
inventory/host_vars/ceres/: main.yml
inventory/host_vars/ceres-caddy/: main.yml
inventory/host_vars/ceres-firewall/: main.yml
inventory/host_vars/ceres-frigate/: main.yml  vault.yml
inventory/host_vars/ceres-jumphost/: main.yml  vault.yml
inventory/host_vars/ceres-postgresql/: main.yml  vault.yml
inventory/host_vars/ceres-router/: main.yml  vault.yml
inventory/host_vars/ceres-vaultwarden/: main.yml
inventory/host_vars/ceres-zigbee2mqtt/: main.yml
inventory/host_vars/do-ams3-01/: vault.yml
inventory/host_vars/luna/: main.yml  vault.yml
inventory/host_vars/luna-cappuccino/: main.yml
inventory/host_vars/luna-firewall/: main.yml
inventory/host_vars/luna-gentoogram/: main.yml
inventory/host_vars/luna-gitea/: main.yml
inventory/host_vars/luna-jumphost/: main.yml
inventory/host_vars/luna-media/: main.yml
inventory/host_vars/luna-rehome/: main.yml
inventory/host_vars/luna-reverse-proxy/: main.yml
inventory/host_vars/luna-znc/: main.yml
inventory/host_vars/monitor/: main.yml  vault.yml
inventory/host_vars/nova/: main.yml  vault.yml
inventory/host_vars/pve/: main.yml  vault.yml
inventory/host_vars/pve-firewall/: main.yml
inventory/host_vars/pve-frigate/: main.yml  vault.yml
inventory/host_vars/pve-mqtt/: main.yml  vault.yml
inventory/host_vars/pve-postgresql/: main.yml  vault.yml
inventory/host_vars/pve-router/: vault.yml
playbooks/: main.yml
roles/docker/: LICENSE
vault/: id_ed25519
(+107 files in other folders)
