[project]
name = "infra"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = ["ansible-core>=2.19.0"]

[dependency-groups]
dev = [
    "prek>=0.4.4",
    "ruff>=0.14.0",
    "shellcheck-py>=0.10.0.1",
    "ansible-lint>=25.1.3",
    "yamllint>=1.37.1",
]

[tool.ruff]
force-exclude = true

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "DTZ",
    "E",
    "ERA",
    "F",
    "FIX",
    "FLY",
    "FURB",
    "G010",
    "G101",
    "G201",
    "G202",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "T20",
    "TC",
    "TD",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]

# ruff format compatibility.
ignore = [
    "COM812",
    "COM819",
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "E501",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
]

[tool.ruff.lint.per-file-ignores]
# Jinja2 templates: ansible_managed comment is not commented-out code;
# subprocess calls use fixed system tool names, not user input.
"roles/notifications/templates/*.py" = ["ERA001", "S603", "S607", "TRY003"]
