[project]
name = "infra"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = ["ansible-core==2.21.1"]

[dependency-groups]
dev = [
    "prek>=0.4.5",
    "ruff>=0.15.18",
    "shellcheck-py>=0.11.0.1",
    "ansible-lint>=26.4.0",
    "yamllint>=1.38.0",
]

[tool.ruff]
force-exclude = true

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "DTZ",
    "E",
    "ERA",
    "F",
    "FIX",
    "FLY",
    "FURB",
    "G010",
    "G101",
    "G201",
    "G202",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "T20",
    "TC",
    "TD",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]

# ruff format compatibility.
ignore = [
    "COM812",
    "COM819",
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "E501",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
]

[tool.ruff.lint.per-file-ignores]
"roles/notifications/templates/*.py" = ["ERA001", "S603", "S607", "TRY003"]
